# open-p2p

./: AGENTS.md  README.md  index.html  justfile  pyproject.toml
config/policy_model/: 1200M.yaml  150M.yaml  300M.yaml  600M.yaml  dev.yaml
devtools/scripts/: activate.sh  ffmpeg_build_script.sh  lint.sh
elefant/config/: load_config.py
elefant/data/: __init__.py  action_label_video_proto_dataset.py  annotation_action_mapping.py  policy_action_mapping.py  video_proto_dataset.py
elefant/data/rescale/: main.py  rescale.py  resize.py  test_rescale.py
elefant/im_tokenizer/: __init__.py
elefant/policy_model/: inference.py  stage3_finetune.py  validation.py
recap/: BUILD.bazel  Cargo.toml  README.md  build.rs  recap.just
recap/assets/: README.md
recap/examples/: client.py
recap/src/: external.rs  hot_key.rs  lib.rs  logger.rs  main.rs  metrics_impl.rs  pages.rs  paths.rs  saved_state.rs  server.rs  snap_shot_state.rs
recap/src/handler/: mod.rs
recap/src/handler/capture/: helpers.rs  input.rs  lag_channel.rs  mod.rs  on_finish_check.rs
recap/src/input_manager/: double_check.rs  game_pad.rs  keyboard.rs  mod.rs  mouse.rs  simulate.rs  timeline.rs
recap/src/input_manager/keyboard/: layout.rs
recap/src/performance/: basic.rs  mod.rs  recording.rs  utils.rs
recap/src/sound/: beep.rs  file_source.rs  mod.rs
recap/src/upload/: mod.rs
recap/src/utils/: action.rs  mod.rs  play_back_annotations.rs  view_state.rs  windows.rs
recap/src/widgets/: meta_data.rs  mod.rs  set_target.rs  system_info.rs  window_size.rs
recap/tests/: check_send_recv.rs  loadproto.rs
recap/tests/assets/: system_and_user.proto  system_only.proto  user_only.proto
recap/tests/snapshots/: loadproto__load_proto-2.snap  loadproto__load_proto-3.snap  loadproto__load_proto.snap
scripts/: download_checkpoints.py  download_data.py
