[package]
name = "recap"
version = "0.1.18"
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[package.metadata.versions]
# RECAP_VERSION: Used in capture device specs and metadata
# Version 6 includes mouse acceleration fixes
# Version 7 fixed stuck keys issue by locking earlier during initial keyboard poll
# Version 8 includes (update comment as needed)
# Version 9 fixes: lock input when reading keys; disallow uploading of erroring captures
# Version 10 remove videorate element from GStreamer pipeline seemingly fixing fps issues
# Version 11 adds gamepad input support and playback support
# Version 12 adds events to proto file and a timeline in inputmanager
# Version 13 recap with event fixes and remove in app start/stop
# Version 14 add better event support and reworking all event handling. Reworks metrics and adds graphs
# Version 15 add 10% chance to record in full rgb color profile
# Version 16 hard code simulated to false if inference is disabled. remove some checking code that was wrong. filter out volume keys
# Version 17 fix bug where if the gamepad is not connected after starting recap, it would never be detected
# Version 18 add audio recording support also adds quote key to hold while talking
recap_version = 18

# PROTO_VERSION: Version of the video annotation protocol
# Version 3 of the video annotation protocol (update comment when changing)
# When updating this version, add comment in proto file explaining the change
# Version 4 adds gamepad input support
# Version 5 adds events with times to proto file
# Version 6 adds support for system and user mouse buttons
# Version 7 adds audio key press events
proto_version = 7

[features]
default = ["inference", "playback", "server"]
trace = ["dot_graph"]
window_info = []
convert = ["video_annotation_proto/serialize", "clap"]
dot_graph = ["recap_gst/dot_graph"]
inference = []
playback = []
encoding-check = []
server = ["hyper", "hyper-util", "http", "http-body-util"]
gpu_render = ["iced/wgpu"]

[dependencies]
# input dependencies
device_query.workspace = true

# video processing dependencies
recap_gst.workspace = true


# iced
iced = { features = [
    "tokio",
    "web-colors",
    "auto-detect-theme",
    "canvas",
    "debug",
], workspace = true }
iced_core = { workspace = true }
iced_winit = { workspace = true, features = ["program"] }
iced_futures = { workspace = true }
iced_graphics = { workspace = true }
winit = { workspace = true }
iced_fonts = { workspace = true }

snowline = { git = "https://github.com/n1ght-hunter/snowline.git", rev = "1092b57" }

# gamepad dependencies
gilrs = { version = "0.11.0", default-features = false, features = ["xinput"] }
vigem-client = "0.1.4"
flume = "0.11.1"

serde.workspace = true
serde_json.workspace = true
ron = { workspace = true }
ctrlc = "3.4.5"
clap = { workspace = true, optional = true, features = ["derive"] }
anyhow.workspace = true
tracing-subscriber.workspace = true
nom.workspace = true
tracing.workspace = true
metrics.workspace = true
metrics-util.workspace = true
video_annotation_proto.workspace = true
uuid = { workspace = true, features = ["v7"] }
notify = "8.0.0"
rust-s3 = "0.35.1"
ureq.workspace = true
tokio.workspace = true
rdev.workspace = true
base64.workspace = true
chrono.workspace = true
video_inference_grpc.workspace = true
tokio-stream = "0.1.17"
input_codes.workspace = true
arboard = "3.4.1"
sysinfo = "0.33.1"
derive_more = { workspace = true, features = ["debug", "default"] }
open.workspace = true
parking_lot = "0.12.3"
rodio.workspace = true
rayon.workspace = true
thiserror.workspace = true
zip.workspace = true
window-handling.workspace = true
rand.workspace = true
recap-upload.workspace = true
wsl-tools.workspace = true
fast_image_resize = "=5.1.4"
hyper = { workspace = true, optional = true }
hyper-util = { workspace = true, optional = true }
http = { workspace = true, optional = true }
http-body-util = { workspace = true, optional = true }
glam.workspace = true
indexmap = "2.11.0"
hashbrown = "0.15.5"
quanta = "0.12.6"
itertools.workspace = true

[target.'cfg(target_os = "windows")'.dependencies]
window_tracking.workspace = true
windows = { workspace = true, features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Controls",
    "Win32_System_ProcessStatus",
] }
win-programs.workspace = true


[dev-dependencies]
rand.workspace = true
video_inference_grpc = { workspace = true, features = ["server"] }
insta = { version = "1.43.1", features = ["ron"] }
video_annotation_proto = { workspace = true, features = ["serialize"] }

[build-dependencies]
toml = "0.9"


[lints]
workspace = true

[[bin]]
name = "convert"
required-features = ["convert"]
